--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@shopify/prettier-plugin-liquid": "^1.6.3",
+    "prettier": "^3.4.2",
     "tailwindcss": "^3.4.17"
   }
 }
