--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "ltw-theme-store",
-  "version": "1.0.0",
-  "description": "[![Generic badge](https://img.shields.io/badge/course%20available%3F-yes-green.svg)](https://shields.io/)",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@shopify/prettier-plugin-liquid": "^1.6.3",
-    "prettier": "^3.4.2",
-    "tailwindcss": "^3.4.17"
-  }
+	"name": "ltw-theme-store",
+	"version": "1.0.0",
+	"description": "[![Generic badge](https://img.shields.io/badge/course%20available%3F-yes-green.svg)](https://shields.io/)",
+	"main": "index.js",
+	"scripts": {
+		"dev": "npx tailwindcss -i ./src/tailwind.css -o ./assets/application.css --watch",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@shopify/prettier-plugin-liquid": "^1.6.3",
+		"prettier": "^3.4.2",
+		"tailwindcss": "^3.4.17"
+	}
 }
